improve on layout and login, sing up screen :O (wip)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<nz-layout>
+    <nz-header>Mi tienda piloto</nz-header>
+    <nz-content>
+        <router-outlet></router-outlet>
+    </nz-content>
+    <nz-footer>Version 1.0</nz-footer>
+</nz-layout>
