--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+.wrapper-center {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+}
