--- a/src/app/screens/auth/sign-up/sign-up.component.html
+++ b/src/app/screens/auth/sign-up/sign-up.component.html
@@ -2,13 +2,13 @@
     <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
         <nz-form-item>
             <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
-            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
+            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="El E-mail es invalido!">
                 <input nz-input formControlName="email" id="email" />
             </nz-form-control>
         </nz-form-item>
         <nz-form-item>
             <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Contraseña</nz-form-label>
-            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
+            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Ingresa la contraseña!">
                 <input nz-input type="password" id="password" formControlName="password"
                     (ngModelChange)="updateConfirmValidator()" />
             </nz-form-control>
@@ -29,7 +29,7 @@
         </nz-form-item>
         <nz-form-item nz-row class="register-area">
             <nz-form-control [nzSpan]="14" [nzOffset]="6">
-                <button nz-button nzType="primary">Registrar</button>
+                <button nz-button nzType="primary" [disabled]="validateForm.invalid">Registrar</button>
                 ó <a routerLink="/auth/login" class="nav-link" href="#">¿Ya posees una cuenta?</a>
             </nz-form-control>
         </nz-form-item>
