--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,5 @@
-nz-header,
-nz-footer {
-    background: #7dbcea;
-    color: #fff;
-    height: 64px;
-}
-
 nz-content {
-    height: calc(100vh - 64px - 64px);
+    height: calc(100vh - 64px);
 }
 
 nz-layout {
