--- a/src/app/screens/auth/login/login.component.html
+++ b/src/app/screens/auth/login/login.component.html
@@ -16,7 +16,7 @@
         </nz-form-control>
       </nz-form-item>
       <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [disabled]="validateForm.invalid">Iniciar sesión</button>
-      ó <a routerLink="/signup" class="nav-link" href="#">registrate ahora!</a>
+      ó <a class="nav-link" routerLink="/signup">registrate ahora!</a>
     </form>
   </nz-card>
 </div>
