--- a/src/app/screens/auth/register/register.component.html
+++ b/src/app/screens/auth/register/register.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper-center">
-    <nz-card style="width:400px;" [nzBordered]="false" nzTitle="Registro">
+<div class="wrapper-center bgc-grey">
+    <nz-card [nzBordered]="false" nzTitle="Registro">
         <form nz-form nzLayout="vertical" [formGroup]="validateForm" (ngSubmit)="submitForm()">
             <nz-form-item>
                 <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
@@ -15,7 +15,8 @@
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="checkPassword" nzRequired>Confirmar contraseña</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="checkPassword" nzRequired>Confirmar contraseña
+                </nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
                     <input nz-input type="password" formControlName="checkPassword" id="checkPassword" />
                     <ng-template #errorTpl let-control>
@@ -36,6 +37,4 @@
             </nz-form-item>
         </form>
     </nz-card>
-  </div>
-  
-  
+</div>
