--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~ng-zorro-antd/ng-zorro-antd.aliyun.css";
 
 .wrapper-center {
     display: flex;
     justify-content: center;
     height: 100%;
     align-items: center;
+}
+
+.bgc-grey {
+    background: #ECECEC;
+}
+
+.ant-layout-header {
+    height: 64px;
+    padding: 0 50px;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 64px;
+    background: #ffffff;
+}
+
+.wrapper-container {
+    padding: 15px 50px;
+    min-height: calc(100vh - 64px);
 }
