--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~ng-zorro-antd/ng-zorro-antd.aliyun.css";
 
-.wrapper-center {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items: center;
+.mt-15 {
+    margin-top: 15px;
 }
 
 .bgc-grey {
