--- a/src/app/screens/auth/login/login.component.html
+++ b/src/app/screens/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div nz-row class="mt-15">
   <div nz-col nzSpan="24" [nzSm]="{ span: 12, offset: 6 }" [nzMd]="{ span: 8, offset: 8 }">
-    <nz-card [nzBordered]="true" nzTitle="Login">
+    <nz-card [nzBordered]="true" nzTitle="Login" [nzExtra]="extraTemplate">
       <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
         <nz-form-item>
           <nz-form-control nzErrorTip="El E-mail es invalido!">
@@ -17,9 +17,12 @@
           </nz-form-control>
         </nz-form-item>
         <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'"
-          [disabled]="validateForm.invalid">Iniciar sesión</button>
+          [disabled]="loading || validateForm.invalid">Iniciar sesión</button>
         ó <a class="nav-link" routerLink="/register">registrate ahora!</a>
       </form>
     </nz-card>
   </div>
 </div>
+<ng-template #extraTemplate>
+  <nz-spin *ngIf="loading" nzSimple></nz-spin>
+</ng-template>
