--- a/src/app/screens/auth/register/register.component.html
+++ b/src/app/screens/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div nz-row class="mt-15">
     <div nz-col nzSpan="16" nzOffset="4">
-        <nz-card [nzBordered]="true" nzTitle="Registro">
+        <nz-card [nzBordered]="true" nzTitle="Registro" [nzExtra]="extraTemplate">
             <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
                 <nz-form-item>
                     <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
@@ -32,7 +32,7 @@
                 </nz-form-item>
                 <nz-form-item nz-row class="register-area">
                     <nz-form-control [nzSpan]="14" [nzOffset]="6">
-                        <button nz-button nzType="primary" [disabled]="validateForm.invalid">Registrar</button>
+                        <button nz-button nzType="primary" [disabled]="loading || validateForm.invalid">Registrar</button>
                         ó <a routerLink="/login" class="nav-link" href="#">¿Ya posees una cuenta?</a>
                     </nz-form-control>
                 </nz-form-item>
@@ -40,3 +40,6 @@
         </nz-card>
     </div>
 </div>
+<ng-template #extraTemplate>
+    <nz-spin *ngIf="loading" nzSimple></nz-spin>
+</ng-template>
