--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,6 +3,6 @@
     <li routerLink="ordenes" nz-menu-item>Ordenes</li>
   </ul>
   <div>
-    <button (click)="logout()" nz-button nzType="default">Cerrar sesión</button>
+    <button (click)="logout()" nz-button nzType="primary">Cerrar sesión</button>
   </div>
 </div>
